--- a/requirements.txt
+++ b/requirements.txt
@@ -12,18 +12,25 @@ coverage==7.3.2
 Django==4.2.7
 django-cors-headers==4.3.1
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
 drf-yasg==1.21.7
+flake8==6.1.0
 idna==3.4
 inflection==0.5.1
 kombu==5.3.3
+mccabe==0.7.0
 packaging==23.2
 Pillow==10.1.0
 prompt-toolkit==3.0.41
 psycopg2-binary==2.9.9
+pycodestyle==2.11.1
+pyflakes==3.1.0
+PyJWT==2.8.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
 PyYAML==6.0.1
+redis==5.0.1
 requests==2.31.0
 six==1.16.0
 sqlparse==0.4.4
