--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,5 @@ DB_PASSWORD=your_database_password
 DB_HOST=your_db_host
 DJANGO_SECRET_KEY=your_secret_django_key
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token
+CELERY_URL=your_celery_broker_url
+CELERY_BACKEND=your_celery_result_backend
